fix: use struct for query params to keep the types in sync
